git-svn-id: http://svn.seqan.de/seqan/trunk@1206 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/docs/TODO.txt
+++ b/seqan/docs/TODO.txt
@@ -39,3 +39,6 @@ Zum Release Herbst 2007:
 * Wechselseitige Konversion sicherstellen:
     - die Sequenztypen
     - die zwei Alignment-Datenstrukturen
+
+* Demos:
+    - Iterator demo kompiliert nicht
