git-svn-id: http://svn.seqan.de/seqan/trunk@1208 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/docs/TODO.txt
+++ b/seqan/docs/TODO.txt
@@ -40,5 +40,7 @@ Zum Release Herbst 2007:
     - die Sequenztypen
     - die zwei Alignment-Datenstrukturen
 
+* Strings auf "move" optimieren
+
 * Demos:
     - Iterator demo kompiliert nicht
