--- a/seqan/docs/TODO.txt
+++ b/seqan/docs/TODO.txt
@@ -12,13 +12,14 @@ Zum Release Herbst 2007:
 * Tutorials:
     - Getting Started
     + Sequences
+    - Alignments
     - Files
-    - Searching
-    + Indices
     - Graphs
+    + Indices
     - Modifiers
-    - Scoring
     - Motif Search
+    - Scoring
+    - Searching
     
 * Überblicksseite anpassen
 * Indexseiten mit Kommentartext versehen.
@@ -28,19 +29,21 @@ Zum Release Herbst 2007:
 * Concepts vervollständigen
     - ...
 
-* Naming-Convention durchsetzen
-
 * dddoc-Warnings raus
 
 * Dokusystem:
-    - Neue Warnung: Doppelte-Description
-    - Neue Warnung: Naming-Convention verletzt
-    - Neue Warnung: param nicht in einer der signaturen enthalten.
+    + Neue Warnung: Doppelte summaries
+    + Neue Warnung: Naming-Convention verletzt
+    + Neue Warnung: param nicht in einer der signaturen enthalten.
     - Identische Values eliminieren
     - ..param.concept erzeugt ..param.type für alle Typen, die das concept implementieren.
     - Subsubkategorien
     - Spezialseite mit Warnings
     - Spezialseite: Index
+    + "Tag" field, soll "Value" in "Tag"-Kategorie ersetzen
+    + Glossar (- wird noch nicht in Suchfunktion gefunden)
+    - References
+    + Output field und subfield
     
 * Demos vervollständigen
 
@@ -50,7 +53,7 @@ Zum Release Herbst 2007:
 2. Inhalte:
 
 * Fehlende Funktionalität:
-    - "score" Funktion für approximative Suche
+    + "score" Funktion für approximative Suche
     - operatoren! Da fehlt sicher irgendwo was.
 
 * Wechselseitige Konversion sicherstellen:
@@ -61,3 +64,5 @@ Zum Release Herbst 2007:
 
 * Demos:
     - Iterator demo kompiliert nicht
+
+* Fehler im file reader (test file)
