git-svn-id: http://svn.seqan.de/seqan/trunk@1749 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/docs/TODO.txt
+++ b/seqan/docs/TODO.txt
@@ -8,6 +8,7 @@ Inhalte:
 * Filtering-Algorithmen Swift & Co.
 * Wu-Manber wieder lauffähig machen
 * Seed-Klassen (Kemena)
+* Hamming-Distanz-Sucher
 
 
 Korrekturen/Anpassungen:
