--- a/seqan/misc/snapshot/README
+++ b/seqan/misc/snapshot/README
@@ -1,8 +1,9 @@
 This is SeqAn, the C++ template library for sequence analysis
 
-See http://www.seqan.de for more information
+See http://www.seqan.de/ for more information
 
-Read "docs/Page_Installation.html" for detailed installation instructions.
+For detailed installation instructions read:
+http://trac.mi.fu-berlin.de/seqan/wiki/Tutorial/GettingStarted
 
 
 Folders:
@@ -14,15 +15,6 @@ Folders:
 "docs":  HTML-Documentation
 "seqan": SeqAn library (add the folder that contains "seqan" to 
          your include path)
-
-
-Files:
-======
-
-"Makefile": make file for Linux/Darwin/Solaris
-"*_7.sln", "*_7.vcproj": Visual Studio .net 2003 solution and project files
-"*_8.sln", "*_8.vcproj": Visual Studio .net 2005 solution and project files
-"*_9.sln", "*_9.vcproj": Visual Studio .net 2008 solution and project files
 
 
 Have fun!
