demos link updated
git-svn-id: http://svn.seqan.de/seqan/trunk@8433 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/misc/snapshot/README
+++ b/seqan/misc/snapshot/README
@@ -11,9 +11,9 @@ Folders:
 
 "apps":  SeqAn applications
 "cmake": CMake files to create your own project files
-"demos": SeqAn demos, see also "docs/INDEXPAGE_Demo.html"
+"demos": SeqAn demos, see also http://www.seqan.de/dddoc/html/INDEXPAGE_Demo.html
 "docs":  HTML-Documentation
-"seqan": SeqAn library (add the folder that contains "seqan" to 
+"seqan": SeqAn library (add the folder that contains "seqan" to
          your include path)
 
 
