--- a/seqan/README
+++ b/seqan/README
@@ -55,7 +55,7 @@ can be found in the LICENSE files.
 Assuming that you have checked out the repository already, all
 prerequisites are installed and you are on Linux or Mac Os X:
 
-  $ mkdir -p build/Debug
+  $ mkdir build/Debug
   $ cd build/Debug
   $ cmake ../..
   $ make test_basic
@@ -66,13 +66,13 @@ prerequisites are installed and you are on Linux or Mac Os X:
  6. Documentation Resources
 ===========================================================================
 
-	Getting Started
-	  https://trac.mi.fu-berlin.de/seqan/wiki/Tutorial/GettingStarted
-	Tutorial
-	  http://trac.mi.fu-berlin.de/seqan/wiki/Tutorial
-	How Tos
-	  http://trac.mi.fu-berlin.de/seqan/wiki/HowTo
-	Stable Documentation
+  Getting Started
+    https://trac.mi.fu-berlin.de/seqan/wiki/Tutorial/GettingStarted
+  Tutorial
+    http://trac.mi.fu-berlin.de/seqan/wiki/Tutorial
+  How Tos
+    http://trac.mi.fu-berlin.de/seqan/wiki/HowTo
+  Stable Documentation
     http://www.seqan.de/dddoc/html_devel/
   Nightly Documentation (updated, more recent!)
     http://www.seqan.de/dddoc/html_devel/
