--- a/seqan/core/apps/mason/README
+++ b/seqan/core/apps/mason/README
@@ -22,6 +22,33 @@ simulate haplotypes.
 Reads are then uniformly sampled from these haplotypes and sequencing
 technology specific errors are introduced.
 
+How To Install Mason
+--------------------
+
+The following steps perform a fresh checkout of SeqAn, so you might just want
+to update your checkout.
+
+    svn co http://svn.mi.fu-berlin.de/seqan/trunk/seqan seqan-trunk
+
+Now, we create a new build directory and create some Makefiles there using
+CMake.  We enable optimization by switching to the "Release" build mode.  Then,
+we build the prograph.
+
+    cd seqan-trunk/build
+    mkdir Release
+    cd Release
+    cmake -DCMAKE_BUILD_TYPE=Release ..
+    make mason
+
+Finally, we can call mason and display the built-in help.
+
+    ./core/apps/mason/mason --help
+
+If you want to find out more about how to build applications in SeqAn then
+have a look at our "Getting Started" Tutorial:
+
+    http://trac.mi.fu-berlin.de/seqan/wiki/Tutorial/GettingStarted
+
 How To Call Mason
 -----------------
 
