--- a/seqan/core/apps/micro_razers/README
+++ b/seqan/core/apps/micro_razers/README
@@ -139,10 +139,17 @@ the command line:
 3.2. Output Format Options
 ---------------------------------------------------------------------------
 
+  [ -of NUM ],  [ --outputFormat ]
+  
+  Specify the desired output format: 
+  NUM = 0   => MicroRazerS default format
+  NUM = 1   => SAM format
+
   [ -a ],  [ --alignment ]
 
-  Dump the alignment for each match in the ".result" file. The alignment is
-  written directly after the match and has the following format:
+  Dump the alignment for each match in the ".result" file, only possible for
+  -of 0, i.e. MicroRazerS default output format. The alignment is written 
+  directly after the match and has the following format:
   #Read:   CAGGAGATAAGCTGGATCTTT
   #Genome: CAGGAGATAAGCTGGATCTTT
 
@@ -168,7 +175,8 @@ the command line:
 
   [ -pf NUM ],  [ --position-format NUM ]
   
-  Select how positions are stored in the output file. 
+  Select how positions are stored in the output file (only relevant for 
+  MicroRazerS default output format, i.e. -of 0). 
   If NUM is 0, the gap space is used, i.e. gaps around characters are 
   enumerated beginning with 0 and the beginning and end position is the 
   postion of the gap before and after a match (default).
@@ -182,12 +190,11 @@ the command line:
 
 
 ---------------------------------------------------------------------------
-4. Output Format
+4.1. Default Output Format
 ---------------------------------------------------------------------------
 
-The output file is a text file whose lines represent matches. A line 
-consists of different tab-separated match values. In the following 
-format:
+The default output file is a text file whose lines represent matches. A line 
+consists of different tab-separated match values. In the following format:
 
 RName 0 RLength GStrand GName GBegin GEnd PercID MatchLen
 
@@ -204,6 +211,25 @@ Match value description:
 
 For matches on the reverse strand, GBegin and GEnd are positions on the 
 related forward strand.
+
+
+---------------------------------------------------------------------------
+4.2. SAM Output Format
+---------------------------------------------------------------------------
+
+If -of 1 is specified, the resulting matches will be written out in SAM 
+format. For a full specification of the SAM format please see 
+http://samtools.sourceforge.net.
+
+MicroRazerS assigns each read with multiple best matches a mapping quality 
+of "0". If only one best match was found, it will receive a "255" in the 
+mapping quality column. Column 12 informs about the sequence identity in
+the matched part of the read, e.g. AS:i:100 means that the read match has
+100% sequence identity, i.e. does not contain any mismatches. Unmapped 
+read suffixes will be given as soft-clipped sequence in the Cigar string.
+For example, a 30bp read with a 22bp prefix match will have the Cigar string
+"22M8S", or "8S22M" if it matches the reverse strand.
+
 
 
 ---------------------------------------------------------------------------
