--- a/seqan/util/ports/README
+++ b/seqan/util/ports/README
@@ -1,10 +1,10 @@
 To test the SeqAn port do the following:
 
-cd seqan-trunk/utils/ports
+cd seqan-trunk/util/ports
 portindex
 
 Then add the path to your port sources, i.e. by adding the following line to
-the end of the file /opt/local/etc/macports/source.conf:
+the end of the file /opt/local/etc/macports/sources.conf:
 
 file:///Users/YOURUSERNAME/seqan-trunk/util/ports
 
